# django-object-actions

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Procfile  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.claude/skills/: maintenance.md
.github/workflows/: ci.yml  conventional-pr.yml  release.yml  semantic-pr.yml
django_object_actions/: __init__.py  apps.py  factories.py  models.py  utils.py
django_object_actions/static/django_object_actions/css/: django-object-actions.css  style.css
django_object_actions/templates/django_object_actions/: action_trigger.html  change_form.html  change_list.html  include.js  modal_form.html  object_actions.html
django_object_actions/templates/mezzanine_object_actions/: change_form.html  change_list.html
django_object_actions/templatetags/: object_actions.py
django_object_actions/tests/: __init__.py  test_admin.py  test_urls.py  test_utils.py  tests.py
example_project/: example_project.sqlite  settings.py  urls.py
example_project/polls/: admin.py  factories.py  models.py
example_project/polls/fixtures/: initial_data.json  sample_data.json
example_project/polls/migrations/: 0001_initial.py  0002_auto_20200805_0239.py
example_project/polls/templates/: 404.html  clear_choices.html
example_project/test_app/: tests.py
