[project]
name = "django-object-actions"
version = "4.3.0"
description = "A Django app for adding object tools for models in the admin"
authors = [{ name = "crccheck", email = "c@crccheck.com" }]
license = { text = "Apache-2.0" }
readme = "README.md"
# repository = "https://github.com/crccheck/django-object-actions"
keywords = ["django", "admin"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
  "coverage==7.*",
  "django-extensions==3.*",
  "factory-boy==3.*",
  "dj-database-url==2.*",
  "ruff",
]

[tool.setuptools]
packages = ["django_object_actions"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["django_object_actions/__init__.py:__version__"]
build_command = "pip build"

[tool.coverage.run]
source = ["django_object_actions"]
omit = ["*/tests/*"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "__repr__",
  "__unicode__",
  "raise NotImplementedError",
]

[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = ["UP"]
